--- a/API/views/account/list-nhanVien.ejs
+++ b/API/views/account/list-nhanVien.ejs
@@ -10,10 +10,14 @@
 
 <body>
     <%- include('../inc/header') %>
-        <h2 style="text-align: center;">tài Khoản Nhân Viên </h2>
+        <h2 style="text-align: center; color: rgb(255, 153, 0);">Danh sách nhân viên </h2>
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <a href="/account/account/add/">
+                        <button type="submit" class="btn btn-warning" style="margin-right: 10px;">Add new
+                            Acount </button>
+                    </a>
                     <table border="1" class="table table-bordered border-black w-100">
                         <thead>
                             <tr>
@@ -22,6 +26,7 @@
                                 <th scope="col" style="width: 10%;">FullName</th>
                                 <th scope="col" style="width: 10%;">NumberPhone</th>
                                 <th scope="col" style="width: 10%;">Status</th>
+                                <th scope="col" style="width: 10%;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -31,7 +36,7 @@
                                         <%= row.Email %>
                                     </td>
                                     <td>
-                                        <%= row.Password %>
+                                        <%= "*******************************" %>
                                     </td>
                                     <td>
                                         <%= row.FullName %>
@@ -40,7 +45,25 @@
                                         <%= row.NumberPhone %>
                                     </td>
                                     <td>
-                                        <%= row.Status %>
+                                        <% if (row.Status==0) { %>
+                                            <%= "Offline" %>
+                                        <% } else{ %>
+                                            <%="Online" %>
+                                        <% } %>
+                                    </td>
+                                    <td class="text-center">
+                                        <div class="btn-group" role="group">
+                                            <a href="/account/account/edit/<%= row._id %>">
+                                                <button type="submit" class="btn btn-warning w-100"
+                                                    style="margin-right: 10px;">Sửa</button>
+                                            </a>
+                                            <a>
+                                                <button type="button" class="btn btn-danger w-100"
+                                                    onclick="handleDelete('<%= row._id %>')"
+                                                    style="margin-left: 10px;">Xóa</button>
+                                            </a>
+
+                                        </div>
                                     </td>
                                 </tr>
                                 <% }) %>
