--- a/API/views/category/update-category.ejs
+++ b/API/views/category/update-category.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <div class="text-center">
-        <h1>Update category</h1>
+        <h1 style=" color: rgb(255, 153, 0);">Update category</h1>
         <form action="" method="post" class="form-control w-75 m-lg-auto bg-secondary">
             
             <% if(obj!=null){%>
