--- a/API/views/product/add-product.ejs
+++ b/API/views/product/add-product.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>Thêm mới sản phẩm</h1>
+    <h1 style=" color: rgb(255, 153, 0);">Thêm mới sản phẩm</h1>
 <form action="" method="post" enctype="multipart/form-data" class="form-control w-75 m-lg-auto bg-secondary">
     Tên sản phẩm: <input type="text"  class="form-control" name="NameProduct" id="NameProduct"> <br>
     Giá tiền: <input type="text"  class="form-control" name="Price" id="Price"> <br>
