--- a/API/views/product/update-product.ejs
+++ b/API/views/product/update-product.ejs
@@ -10,7 +10,7 @@
 <body>
 
     <div class="text-center">
-        <h1>Sửa sản phẩm</h1>
+        <h1 style=" color: rgb(255, 153, 0);">Sửa sản phẩm</h1>
         <form action="" method="post" class="form-control w-75 m-lg-auto bg-secondary">
 
 
