--- a/API/views/account/list-account.ejs
+++ b/API/views/account/list-account.ejs
@@ -28,15 +28,11 @@
 
 <body>
     <%- include('../inc/header') %>
-        <h2 style="text-align: center;">Danh Sách Tài Khoản</h2>
+        <h2 style="text-align: center; color: rgb(255, 153, 0);">Danh Sách Tài Khoản</h2>
         <div class="container">
             <div class="row">
                 <div class="col">
                     <td>
-                        <a href="/account/account/add/">
-                            <button type="submit" class="btn btn-warning" style="margin-right: 10px;">Add new
-                                Acount </button>
-                        </a>
                         <a href="/account/accountNV">
                             <button type="submit" class="btn btn-warning" style="margin-left: 10px;">Nhân Viên
                             </button>
@@ -58,7 +54,7 @@
                                 <th scope="col" style="width: 10%;">FullName</th>
                                 <th scope="col" style="width: 10%;">NumberPhone</th>
                                 <th scope="col" style="width: 10%;">Lever</th>
-                                <th scope="col" style="width: 10%;">Action</th>
+                              
                             </tr>
                         </thead>
                         <tbody>
@@ -68,7 +64,7 @@
                                         <%= row.Email %>
                                     </td>
                                     <td>
-                                        <%= row.Password %>
+                                        <%= "*******************************" %>
                                     </td>
                                     <td>
                                         <%= row.FullName %>
@@ -77,22 +73,13 @@
                                         <%= row.NumberPhone %>
                                     </td>
                                     <td>
-                                        <%= row.Level %>
+                                        <% if (row.Level==0) { %>
+                                            <%= "Khách hàng" %>
+                                        <% } else{ %>
+                                            <%= "Nhân viên" %>
+                                        <% } %>
                                     </td>
-                                    <td class="text-center">
-                                        <div class="btn-group" role="group">
-                                            <a href="/account/account/edit/<%= row._id %>">
-                                                <button type="submit" class="btn btn-warning w-100"
-                                                    style="margin-right: 10px;">Sửa</button>
-                                            </a>
-                                            <a>
-                                                <button type="button" class="btn btn-danger w-100"
-                                                    onclick="handleDelete('<%= row._id %>')"
-                                                    style="margin-left: 10px;">Xóa</button>
-                                            </a>
-
-                                        </div>
-                                    </td>
+                                    
                                 </tr>
                                 <% }) %>
                         </tbody>
