--- a/API/views/billdetail/bill-daduyet.ejs
+++ b/API/views/billdetail/bill-daduyet.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <%- include('../inc/header') %>
-    <h2 style="text-align: center;">Hóa Đơn Đã Duyệt </h2>
+    <h2 style="text-align: center; color: rgb(255, 153, 0);">Hóa Đơn Đã Duyệt </h2>
 
     <div class="container">
         <div class="row">
