--- a/API/views/category/add-category.ejs
+++ b/API/views/category/add-category.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <div class="text-center">
-        <h1>Add new category </h1>
+        <h1 style=" color: rgb(255, 153, 0);">Add new category </h1>
         <form action="" method="post" class="form-control w-50 m-lg-auto bg-secondary">
             <p>
                 <%= smg %>
