--- a/API/views/category/list-category.ejs
+++ b/API/views/category/list-category.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <%- include('../inc/header') %>
-    <h2 style="text-align: center;">Loại</h2>
+    <h2 style="text-align: center; color: rgb(255, 153, 0);">Loại</h2>
         <div class="container">
             <div class="row">
                 <div class="col">
