--- a/API/views/product/list-product.ejs
+++ b/API/views/product/list-product.ejs
@@ -7,10 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-
 <body>
     <%- include('../inc/header') %>
-    <h2 style="text-align: center;">Sản Phẩm</h2>
+    <h2 style="text-align: center; color: rgb(255, 153, 0);">Sản Phẩm</h2>
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -20,9 +19,6 @@
                         </a>
                     </td>
                     <td>
-                        <a href="/apiadmin/thongke">
-                            <button type="submit" class="btn btn-warning">Thống kê </button>
-                        </a>
                     </td>
                 </div>
             </div>
@@ -74,6 +70,30 @@
             </div>
         </div>
         <%- include('../inc/footer') %>
+        <script>
+            document.addEventListener('DOMContentLoaded', async () => {
+                const token = localStorage.getItem('token');
+                const response = await fetch('/apiAdmin/product', {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': `Bearer ${token}`
+                    }
+                });
+    
+                if (response.status === 401 || response.status === 403) {
+                    alert('Invalid or expired token, please log in again.');
+                    window.location.href = "/login"; // Chuyển hướng đến trang đăng nhập
+                } else {
+                    const data = await response.json();
+                    const productList = document.getElementById('product-list');
+                    data.products.forEach(product => {
+                        const productItem = document.createElement('div');
+                        productItem.innerText = product.name;
+                        productList.appendChild(productItem);
+                    });
+                }
+            });
+        </script>
 </body>
 
 </html>
