--- a/API/views/billdetail/list-billdetail.ejs
+++ b/API/views/billdetail/list-billdetail.ejs
@@ -120,7 +120,7 @@
                     }).then(res => res.json())
                         .then(res => {
                            if(isNaN(res)){
-                            totalValue.value = `Lỗi xảy ra  `
+                            totalValue.value = `Total: ${0} VND  `
                            }else{
                            totalValue.value = `Total: ${res} VND `
                            }
