--- a/API/views/account/list-account.ejs
+++ b/API/views/account/list-account.ejs
@@ -53,7 +53,7 @@
                                 <th scope="col" style="width: 10%;">Password</th>
                                 <th scope="col" style="width: 10%;">FullName</th>
                                 <th scope="col" style="width: 10%;">NumberPhone</th>
-                                <th scope="col" style="width: 10%;">Lever</th>
+                                <th scope="col" style="width: 10%;">Level</th>
                               
                             </tr>
                         </thead>
